--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Glyn Jones",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
     "react": "^16.13.1"
   },
   "devDependencies": {
