--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "redux": "^4.0.5",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
