--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "redux": "^4.0.5",
-    "uuid": "^8.0.0"
+    "uuid": "^8.0.0",
+    "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -24,7 +25,6 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "build": "webpack",
