--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react-dom": "^16.13.1",
     "redux": "^4.0.5",
     "uuid": "^8.0.0",
-    "webpack-dev-server": "^3.10.3"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^3.10.3",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
