--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "heroku-postbuild": "webpack -p"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
